--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "site_name": "Privacy Shield | Top VPNs Compared",
-  "domain": "https://vpn.ii-x.com",
-  "niche_keywords": "VPN, Privacy, Streaming, Security",
-  "hero_title": "Stop Being Tracked Online",
-  "primary_color": "#2563eb",
-  "data_file": "vpn_raw.csv",
-  "icon": "🛡️",
+  "site_name": "Global Travel eSIM | 2026 Best Plans",
+  "domain": "https://esim.ii-x.com",
+  "niche_keywords": "eSIM, Travel Data, Roaming, Holafly, Airalo",
+  "hero_title": "Stop Paying Roaming Fees",
+  "primary_color": "#10b981",
+  "data_file": "esim_raw.csv",
+  "icon": "📲",
   "year": "2026"
 }
