--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
   "primary_color": "#10b981",
   "data_file": "esim_raw.csv",
   "icon": "📲",
-  "year": "2026"
+  "year": "2026",
+  "google_analytics_id": "G-LKFYQ2C3YV"
 }
